kubernetes/kachigo.jp/appflowy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: appflowy-cloud-service
  namespace: default
  labels:
    app: appflowy-cloud
spec:
  type: ClusterIP
  selector:
    app: appflowy-cloud
  ports:
  - port: 8000
    targetPort: 8000
    protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: appflowy-search-service
  namespace: default
  labels:
    app: appflowy-search
spec:
  type: ClusterIP
  selector:
    app: appflowy-search
  ports:
  - port: 4002
    targetPort: 4002
    protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: appflowy-admin-frontend-service
  namespace: default
  labels:
    app: appflowy-admin-frontend
spec:
  type: ClusterIP
  selector:
    app: appflowy-admin-frontend
  ports:
  - port: 3000
    targetPort: 3000
    protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: appflowy-web-service
  namespace: default
  labels:
    app: appflowy-web
spec:
  type: ClusterIP
  selector:
    app: appflowy-web
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
