kubernetes/kachigo.jp/appflowy/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: appflowy-routing
  namespace: default
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: "2g"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "86400"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "86400"
    nginx.ingress.kubernetes.io/proxy-http-version: "1.1"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - appflowy.kachigo.jp
    - gotrue.kachigo.jp
    secretName: kachigo-tls-secret
  rules:
  - host: appflowy.kachigo.jp
    http:
      paths:
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: appflowy-cloud-service
            port:
              number: 8000
      - path: /ws
        pathType: Prefix
        backend:
          service:
            name: appflowy-cloud-service
            port:
              number: 8000
      - path: /console
        pathType: Prefix
        backend:
          service:
            name: appflowy-admin-frontend-service
            port:
              number: 3000
      - path: /
        pathType: Prefix
        backend:
          service:
            name: appflowy-web-service
            port:
              number: 80
  - host: gotrue.kachigo.jp
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: gotrue-service
            port:
              number: 9999
